forgejo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo-ingress
  namespace: forgejo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: code.internal.luckywatcher.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forgejo-http
                port:
                  number: 3000

  tls:
    - hosts:
        - code.internal.luckywatcher.dev
      secretName: code-internal-luckywatcher-dev-tls
